Add location map view

--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -46,5 +46,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Need location to show user&apos;s current location</string>
 </dict>
 </plist>
